# SUSIAssistant

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  elective_archive_urls.json  elective_categories_requirements.json  thing.html
src/: izbiraemi.rs  kategorii.rs  main.rs
src/lib/: common.rs  config.rs  consts.rs  course_arranger.rs  fmi_elective.rs  mod.rs  susi_course.rs
